--- a/index.html
+++ b/index.html
@@ -1,25 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>NewsAura AMP</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NewsAura - Latest Articles</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background: #222;
+            color: #fff;
+            padding: 15px;
+            text-align: center;
+        }
+        h1 {
+            margin: 0;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        li {
+            background: #fff;
+            margin: 10px;
+            padding: 15px;
+            border-radius: 5px;
+            transition: 0.3s;
+        }
+        li:hover {
+            background: #f0f0f0;
+        }
+        a {
+            text-decoration: none;
+            color: #333;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-  <h1>NewsAura Articles</h1>
-  <ul>
-  <li><a href="trump-administration-withdraws-2-000-national-guard-troops-from-los-angeles-amid-immigration-tensions.html"> Title</a></li>
-  <li><a href="senate-rolls-back-npr---pbs-funding--john-thune---gop-push-major-cuts-amid-rescissions-fight.html">Title</a></li>
-  <li><a href="-secret-relationship----ana-de-armas---tom-cruise---new-couple----or-just-friends--.html"> Title</a></li>
-  <li><a href="rohit-sharma-drops-major-hint-on-retirement-after-t20-world-cup-2026.html"> Title</a></li>
-  <li><a href="massive-earthquake-sparks-pacific-tsunami-warning---hawaii---california-on-high-alert.html"> Title</a></li>
-  <li><a href="israel-launches-airstrikes-on-gaza---syria-as-child-starvation-crisis-grows.html"> Title</a></li>
-  <li><a href="iphone-17-pro-max---release-date--a19-pro-periscope-zoom---what-buyers-should-know.html"> Title</a></li>
-  <li><a href="german-supermarkets-roll-out-ai-shopping-assistants-shoppers-can-t-believe-it-.html"> Title</a></li>
-  <li><a href="fc-seoul-vs--barcelona-2025--unexpected-drama-in-asia-tour-clash.html"> Title</a></li>
-  <li><a href="bryan-braman-dies-at-38--rare-cancer--gofundme-support---philadelphia-eagles-legacy.html"> Title</a></li>
-  <li><a href="brian-harman-leads-the-british-open-2025--latest-open-championship-leaderboard-updates.html"> Title</a></li>
 
-</ul>
+<header>
+    <h1>NewsAura - Latest Articles</h1>
+</header>
+
+<main>
+    <ul>
+        <li><a href="-secret-relationship----ana-de-armas---tom-cruise---new-couple----or-just-friends--.html">Ana de Armas & Tom Cruise - Secret Relationship?</a></li>
+        <li><a href="brian-harman-leads-the-british-open-2025--latest-open-championship-leaderboard-updates.html">Brian Harman Leads The British Open 2025</a></li>
+        <li><a href="bryan-braman-dies-at-38--rare-cancer--gofundme-support---philadelphia-eagles-legacy.html">Bryan Braman Dies at 38 - Rare Cancer</a></li>
+        <li><a href="fc-seoul-vs--barcelona-2025--unexpected-drama-in-asia-tour-clash.html">FC Seoul vs Barcelona 2025 Drama</a></li>
+        <li><a href="german-supermarkets-roll-out-ai-shopping-assistants-shoppers-can-t-believe-it-.html">German Supermarkets Roll Out AI Shopping Assistants</a></li>
+        <li><a href="iphone-17-pro-max---release-date--a19-pro-periscope-zoom---what-buyers-should-know.html">iPhone 17 Pro Max Release Date & Features</a></li>
+        <li><a href="israel-launches-airstrikes-on-gaza---syria-as-child-starvation-crisis-grows.html">Israel Launches Airstrikes on Gaza & Syria</a></li>
+        <li><a href="massive-earthquake-sparks-pacific-tsunami-warning---hawaii---california-on-high-alert.html">Massive Earthquake Sparks Pacific Tsunami Warning</a></li>
+        <li><a href="rohit-sharma-drops-major-hint-on-retirement-after-t20-world-cup-2026.html">Rohit Sharma Retirement Hint After T20 WC 2026</a></li>
+        <li><a href="senate-rolls-back-npr---pbs-funding--john-thune---gop-push-major-cuts-amid-rescissions-fight.html">Senate Rolls Back NPR & PBS Funding</a></li>
+        <li><a href="trump-administration-withdraws-2-000-national-guard-troops-from-los-angeles-amid-immigration-tensions.html">Trump Withdraws 2,000 National Guard Troops</a></li>
+    </ul>
+</main>
+
 </body>
 </html>
